--- a/housing.html
+++ b/housing.html
@@ -192,7 +192,8 @@
 // ====== CONFIG: Set your GitHub raw CSV URL here ======
 // Example: 'https://raw.githubusercontent.com/USERNAME/REPO/BRANCH/housing/housing.csv'
 // const CSV_URL = 'https://raw.githubusercontent.com/USERNAME/REPO/BRANCH/housing/housing.csv';
-const CSV_URL = 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/housing/housing.csv';
+// const CSV_URL = 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/housing/housing.csv';
+const CSV_URL = 'https://raw.githubusercontent.com/stberry7/stberry7.github.io/refs/heads/main/housing.csv';
 // Fallback relative path if hosting both files together:
 const CSV_FALLBACK = 'housing/housing.csv';
 
