--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="cta">
           <!-- <a class="btn" href="housing/housing.html" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
           <!-- <a class="btn" href="/housing/" aria-label="Open Housing Price Index Dashboard">Open Housing Dashboard</a> -->
-          <a class="btn" href="housing.html" aria-label="Open Housing Price Index Dashboard"> Open Housing Dashboard</a>
+          <a class="btn" href="/housing/housing.html" aria-label="Open Housing Price Index Dashboard"> Open Housing Dashboard</a>
         </div>
       </article>
 
